# certificate-expiration-checker

./: Cargo.toml  README.md  snakeoil.pem
src/: certificates.rs  config.rs  lib.rs  local_config.rs  main.rs  notifications.rs
tests/: 00_experiments.rs  certificates_tests.rs  local_config_tests.rs
tests/fixtures/: alert_min_days.toml  alert_min_days_float.toml  all_certs_no_email.toml  ex_cert.pem  ex_cert_full.pem  ex_cert_full_inverted.pem  ex_cert_full_rsa_delimiter.pem  ex_cert_key.pem  example_email_1_cert.toml  full_notification_test.toml  multiple_certs.crt  private_key_in_the_middle.pem  private_key_no_endtag.pem
