[package]
name = "certexpchecker"
version = "0.1.0"
authors = ["dkvz <dk@dkvz.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[dependencies]
config = "0.10.1"
x509-parser = "0.5.1"
chrono = "0.4"
colored = "1.9"
lettre = "0.9"
lettre_email = "0.9"