[package]
name = "certexpchecker"
version = "1.2.1"
authors = ["dkvz <dk@dkvz.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[dependencies]
getopts = "0.2"
config = "0.13.2"
x509-parser = "0.6.5"
chrono = "0.4"
colored = "1.9"
lettre = "0.9"
lettre_email = "0.9"